--- a/compose.yaml
+++ b/compose.yaml
@@ -1,15 +1,10 @@
-version: '3.8'
-
 services:
   mongodb:
     container_name: mongodb
-    image: mongo
-    ports:
-      - "27017:27017"
+    image: mongo:latest
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=root
-      - MONGO_INITDB_ROOT_PASSWORD=example
-      - MONGO_INITDB_DATABASE=test
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
     networks:
       - backend
 
@@ -22,7 +17,7 @@ services:
       - "3000:3000"
     environment:
       - PORT=3000
-      - DATABASE_URI=mongodb://root:example@localhost:27017/test?authSource=admin
+      - DATABASE_URI=mongodb://root:example@mongodb:27017/test?authSource=admin
     depends_on:
       - mongodb
     networks:
