--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -27,11 +27,15 @@ jobs:
         with:
           node-version: ${{ inputs.node-version }}
 
-      - name: Check Mongodb
-        run:
-          docker ps
-        
+      - name: Wait for MongoDB to be ready
+        run: |
+          until nc -zv 127.0.0.1 27017; do
+            echo "Waiting for MongoDB..."
+            sleep 2
+          done
+        shell: bash
+
       - name: Test the App
         run: |
-          export DATABASE_URI=mongodb://root:example@localhost:27017/test?authSource=admin
+          export DATABASE_URI=mongodb://root:example@127.0.0.1:27017/test?authSource=admin
           npm test
