--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -31,13 +31,13 @@ jobs:
       SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-  # push:
-  #   name: Push
-  #   needs: [test]
-  #   uses: ./.github/workflows/push.yaml
-  #   secrets:
-  #     DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-  #     DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+  push:
+    name: Push
+    needs: [test]
+    uses: ./.github/workflows/push.yaml
+    secrets:
+      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
 
 #   deploy:
 #     name: Deploy
