--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,9 +16,14 @@ jobs:
         image: mongo:latest
         ports:
           - 27017:27017
-        options: > 
-          --env MONGO_INITDB_ROOT_USERNAME=root 
-          --env MONGO_INITDB_ROOT_PASSWORD=example
+        env: 
+          MONGO_INITDB_ROOT_USERNAME: root 
+          MONGO_INITDB_ROOT_PASSWORD: example
+        options: >-
+          --health-cmd mongo
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
