--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -32,16 +32,20 @@ jobs:
       with:
         input: image.tar
         severity: "MEDIUM,HIGH,CRITICAL"
-        format: 'table'
-        template: '@/contrib/gitlab.tpl'
-        output: 'report.txt'
+        format: 'sarif'
+        output: 'trivy-results.sarif'
 
-    - name: Upload Trivy report as a GitHub artifact
-      uses: actions/upload-artifact@v4
+    - name: Upload SARIF file
+      uses: github/codeql-action/upload-sarif@v3
       with:
-        name: trivy-scan-report
-        path: report.txt
-        retention-days: 1
+        sarif_file: trivy-results.sarif
+
+    # - name: Upload Trivy report as a GitHub artifact
+    #   uses: actions/upload-artifact@v4
+    #   with:
+    #     name: trivy-scan-report
+    #     path: report.txt
+    #     retention-days: 1
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v3.2.0
