--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -7,6 +7,8 @@ on:
         required: true
       DOCKERHUB_TOKEN:
         required: true
+      PAT:
+        required: true
 jobs:
   push:
     name: Build, Scan with Trivy, and Push Docker Image
@@ -39,6 +41,8 @@ jobs:
       uses: github/codeql-action/upload-sarif@v3
       with:
         sarif_file: trivy-results.sarif
+      env:
+        GITHUB_TOKEN: ${{ secrets.PAT }}
 
     # - name: Upload Trivy report as a GitHub artifact
     #   uses: actions/upload-artifact@v4
