--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -39,4 +39,4 @@ jobs:
         run: |
           export PORT=3000
           export DATABASE_URI=mongodb://root:example@localhost:27017/test?authSource=admin
-          npm test
+          timeout 60s npm test || true
