--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -41,8 +41,8 @@ jobs:
       uses: github/codeql-action/upload-sarif@v3
       with:
         sarif_file: trivy-results.sarif
-      env:
-        GITHUB_TOKEN: ${{ secrets.PAT }}
+        category: my-analysis-tool
+  
 
     # - name: Upload Trivy report as a GitHub artifact
     #   uses: actions/upload-artifact@v4
