--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -13,6 +13,12 @@ jobs:
   push:
     name: Build, Scan with Trivy, and Push Docker Image
     runs-on: ubuntu-latest
+    permissions:
+      # required for all workflows
+      security-events: write
+      # only required for workflows in private repositories
+      actions: read
+      contents: read
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
