--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -48,6 +48,8 @@ jobs:
       with:
         # Path to SARIF file relative to the root of the repository
         sarif_file: results.sarif
+      env:
+        GITHUB_TOKEN: ${{ secrets.PAT }}
 
     # - name: Upload Trivy report as a GitHub artifact
     #   uses: actions/upload-artifact@v4
