--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -38,6 +38,7 @@ jobs:
     secrets:
       DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+      PAT: ${{ secrets.PAT }}
 
 #   deploy:
 #     name: Deploy
