--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -64,5 +64,5 @@ jobs:
 
     - name: Tag Docker image
       run: |
-        docker tag vsus_verdentsphere:latest ${{ secrets.DOCKERHUB_USERNAME }}/vsus_verdentsphere:${GITHUB_REF#refs/heads/}
-        docker push ${{ secrets.DOCKERHUB_USERNAME }}/vsus_verdentsphere:${GITHUB_REF#refs/heads/}
+        docker tag vsus_verdentsphere:latest ${{ secrets.DOCKERHUB_USERNAME }}/vsus_verdentsphere:dev
+        docker push ${{ secrets.DOCKERHUB_USERNAME }}/vsus_verdentsphere:dev
