multi platform testing

--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -6,6 +6,7 @@ on:
       branches:
         - VSUS-02
         - main
+        - test
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
