--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -70,7 +70,7 @@ jobs:
   merge:
     runs-on: ubuntu-latest
     needs:
-      - build
+      - push
     steps:
       - name: Download digests
         uses: actions/download-artifact@v4
