--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -10,6 +10,7 @@ on:
       PAT:
         required: true
 jobs:
+  jobs:
   push:
     name: Build, Scan with Trivy, and Push Docker Image
     runs-on: ubuntu-latest
@@ -21,55 +22,72 @@ jobs:
           - linux/arm/v7
           - linux/arm64
     steps:
-    - name: Prepare
-      run: |
-        platform=${{ matrix.platform }}
-        echo "PLATFORM_PAIR=${platform//\//-}" >> $GITHUB_ENV  
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Docker meta
-      id: meta
-      uses: docker/metadata-action@v5
-      with:
-        images: ${{ secrets.DOCKERHUB_USERNAME }}/multi
+      - name: Prepare
+        run: echo "PLATFORM_PAIR=${{ matrix.platform // / - }}" >> $GITHUB_ENV  
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
     
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
     
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build Docker image
+        run: |
+          docker buildx build --platform ${{ matrix.platform }} -t vsus_verdentsphere:latest .
+      
+      - name: Save Docker image
+        run: docker save vsus_verdentsphere:latest -o image.tar
+
+      - name: Scan Docker image with Trivy
+        id: trivy_scan
+        uses: aquasecurity/trivy-action@0.23.0
+        with:
+          input: image.tar
+          severity: "MEDIUM,HIGH,CRITICAL"
+          format: 'sarif'
+          output: 'results.sarif'
+
+      - name: Upload SARIF file
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: results.sarif
+        env:
+          GITHUB_TOKEN: ${{ secrets.PAT }}
+
+      - name: Build and push by digest
+        id: build
+        uses: docker/build-push-action@v6
+        with:
+          platforms: ${{ matrix.platform }}
+          labels: ${{ steps.meta.outputs.labels }}
+          outputs: type=image,name=${{ secrets.DOCKERHUB_USERNAME }}/multi,push-by-digest=true,name-canonical=true,push=true
     
-    - name: Login to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-    
-    - name: Build and push by digest
-      id: build
-      uses: docker/build-push-action@v6
-      with:
-        platforms: ${{ matrix.platform }}
-        labels: ${{ steps.meta.outputs.labels }}
-        outputs: type=image,name=${{ secrets.DOCKERHUB_USERNAME }}/multi,push-by-digest=true,name-canonical=true,push=true
-    
-    - name: Export digest
-      run: |
-        mkdir -p /tmp/digests
-        digest="${{ steps.build.outputs.digest }}"
-        touch "/tmp/digests/${digest#sha256:}"          
-    
-    - name: Upload digest
-      uses: actions/upload-artifact@v4
-      with:
-        name: digests-${{ env.PLATFORM_PAIR }}
-        path: /tmp/digests/*
-        if-no-files-found: error
-        retention-days: 1
+      - name: Export and Upload digest
+        run: |
+          mkdir -p /tmp/digests
+          digest="${{ steps.build.outputs.digest }}"
+          echo "${digest#sha256:}" > "/tmp/digests/${{ env.PLATFORM_PAIR }}.txt"          
+
+      - name: Upload digest
+        uses: actions/upload-artifact@v4
+        with:
+          name: digests-${{ env.PLATFORM_PAIR }}
+          path: /tmp/digests/*
+          if-no-files-found: error
+          retention-days: 1
 
   merge:
     runs-on: ubuntu-latest
-    needs:
-      - push
+    needs: push
     steps:
       - name: Download digests
         uses: actions/download-artifact@v4
@@ -94,10 +112,9 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       
       - name: Create manifest list and push
-        working-directory: /tmp/digests
         run: |
           docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
-            $(printf '${{ secrets.DOCKERHUB_USERNAME }}/multi@sha256:%s ' *)          
+            $(printf '${{ secrets.DOCKERHUB_USERNAME }}/multi@sha256:%s ' /tmp/digests/*)          
       
       - name: Inspect image
         run: |
