--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -42,6 +42,15 @@ jobs:
       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
       PAT: ${{ secrets.PAT }}
 
+  push2:
+    name: Push2
+    # needs: [test]
+    uses: ./.github/workflows/push2.yaml
+    secrets:
+      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+      PAT: ${{ secrets.PAT }}
+
 #   deploy:
 #     name: Deploy
 #     needs: [push]
