--- a/.github/workflows/push2.yaml
+++ b/.github/workflows/push2.yaml
@@ -52,12 +52,7 @@ jobs:
       with:
         platforms: ${{ matrix.platform }}
         labels: ${{ steps.meta.outputs.labels }}
-        outputs: |
-          type=image,
-          name=${{ secrets.DOCKERHUB_USERNAME }}/multi,
-          push-by-digest=true,
-          name-canonical=true,
-          push=true
+        outputs: type=image,name=${{ secrets.DOCKERHUB_USERNAME }}/multi,push-by-digest=true,name-canonical=true,push=true
       
     - name: Scan Docker image with Trivy
       id: trivy_scan
