--- a/.github/workflows/push2.yaml
+++ b/.github/workflows/push2.yaml
@@ -58,7 +58,7 @@ jobs:
       id: trivy_scan
       uses: aquasecurity/trivy-action@0.23.0
       with:
-        input: ${{ secrets.DOCKERHUB_USERNAME }}/multi
+        image-ref: ${{ secrets.DOCKERHUB_USERNAME }}/multi
         severity: "MEDIUM,HIGH,CRITICAL"
         format: 'sarif'
         output: 'results.sarif'
@@ -68,7 +68,7 @@ jobs:
       uses: github/codeql-action/upload-sarif@v3
       with:
         # Path to SARIF file relative to the root of the repository
-        sarif_file: results.sarif
+        sarif_file: 'results.sarif'
       env:
         GITHUB_TOKEN: ${{ secrets.PAT }}
 
