--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -30,33 +30,43 @@ jobs:
       uses: docker/metadata-action@v5
       with:
         images: ${{ secrets.DOCKERHUB_USERNAME }}/multi
-    
+
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v3
-    
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-    
+
+    - name: Docker Build
+      uses: docker/setup-buildx-action@v3.3.0
+
+    - name: Buildx version
+      run: docker buildx version
+
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-    
-    - name: Build and push by digest
+
+    - name: Build and push Docker image by digest
       id: build
       uses: docker/build-push-action@v6
       with:
         platforms: ${{ matrix.platform }}
         labels: ${{ steps.meta.outputs.labels }}
         outputs: type=image,name=${{ secrets.DOCKERHUB_USERNAME }}/multi,push-by-digest=true,name-canonical=true,push=true
-    
+
+    # - name: Upload Trivy report as a GitHub artifact
+    #   uses: actions/upload-artifact@v4
+    #   with:
+    #     name: trivy-scan-report
+    #     path: report.txt
+    #     retention-days: 1
+
     - name: Export digest
       run: |
         mkdir -p /tmp/digests
         digest="${{ steps.build.outputs.digest }}"
         touch "/tmp/digests/${digest#sha256:}"          
-    
+  
     - name: Upload digest
       uses: actions/upload-artifact@v4
       with:
@@ -68,36 +78,53 @@ jobs:
   merge:
     runs-on: ubuntu-latest
     needs:
-      - push
+    - push
     steps:
-      - name: Download digests
-        uses: actions/download-artifact@v4
-        with:
-          path: /tmp/digests
-          pattern: digests-*
-          merge-multiple: true
-      
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      
-      - name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ secrets.DOCKERHUB_USERNAME }}/multi
-      
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      
-      - name: Create manifest list and push
-        working-directory: /tmp/digests
-        run: |
-          docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
-            $(printf '${{ secrets.DOCKERHUB_USERNAME }}/multi@sha256:%s ' *)          
-      
-      - name: Inspect image
-        run: |
-          docker buildx imagetools inspect ${{ secrets.DOCKERHUB_USERNAME }}/multi:${{ steps.meta.outputs.version }}
+    - name: Download digests
+      uses: actions/download-artifact@v4
+      with:
+        path: /tmp/digests
+        pattern: digests-*
+        merge-multiple: true
+    
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+    
+    - name: Docker meta
+      id: meta
+      uses: docker/metadata-action@v5
+      with:
+        images: ${{ secrets.DOCKERHUB_USERNAME }}/multi
+
+    - name: Scan Docker image with Trivy
+      id: trivy_scan
+      uses: aquasecurity/trivy-action@0.23.0
+      with:
+        image-ref: ${{ secrets.DOCKERHUB_USERNAME }}/multi:${{ steps.meta.outputs.version }}
+        severity: "MEDIUM,HIGH,CRITICAL"
+        format: 'sarif'
+        output: 'results.sarif'
+    
+    - name: Upload SARIF file
+      uses: github/codeql-action/upload-sarif@v3
+      with:
+        # Path to SARIF file relative to the root of the repository
+        sarif_file: 'results.sarif'
+      env:
+        GITHUB_TOKEN: ${{ secrets.PAT }}
+    
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    
+    - name: Create manifest list and push
+      working-directory: /tmp/digests
+      run: |
+        docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
+          $(printf '${{ secrets.DOCKERHUB_USERNAME }}/multi@sha256:%s ' *)          
+
+    - name: Inspect image
+      run: |
+        docker buildx imagetools inspect ${{ secrets.DOCKERHUB_USERNAME }}/multi:${{ steps.meta.outputs.version }}
