--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -3,10 +3,9 @@ on:
     pull_request:
       types: [opened, synchronize, reopened]
     push:
-      branches:
-        - VSUS-02
-        - main
-        - test
+      # branches:
+      #   - VSUS-02
+      #   - main
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
