--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -95,27 +95,6 @@ jobs:
       uses: docker/metadata-action@v5
       with:
         images: ${{ secrets.DOCKERHUB_USERNAME }}/multi
-
-    - name: Save image into Tar file
-      run: |
-        docker save -o ${{ secrets.DOCKERHUB_USERNAME }}/multi.tar
-
-    - name: Scan Docker image with Trivy
-      id: trivy_scan
-      uses: aquasecurity/trivy-action@0.23.0
-      with:
-        image: ${{ secrets.DOCKERHUB_USERNAME }}/multi.tar
-        severity: "MEDIUM,HIGH,CRITICAL"
-        format: 'sarif'
-        output: 'results.sarif'
-    
-    - name: Upload SARIF file
-      uses: github/codeql-action/upload-sarif@v3
-      with:
-        # Path to SARIF file relative to the root of the repository
-        sarif_file: 'results.sarif'
-      env:
-        GITHUB_TOKEN: ${{ secrets.PAT }}
     
     - name: Login to Docker Hub
       uses: docker/login-action@v3
@@ -128,6 +107,24 @@ jobs:
       run: |
         docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
           $(printf '${{ secrets.DOCKERHUB_USERNAME }}/multi@sha256:%s ' *)          
+
+
+  - name: Scan Docker image with Trivy
+    id: trivy_scan
+    uses: aquasecurity/trivy-action@0.23.0
+    with:
+      image-ref: ${{ secrets.DOCKERHUB_USERNAME }}/multi:${{ steps.meta.outputs.version }}
+      severity: "MEDIUM,HIGH,CRITICAL"
+      format: 'sarif'
+      output: 'results.sarif'
+  
+  - name: Upload SARIF file
+    uses: github/codeql-action/upload-sarif@v3
+    with:
+      # Path to SARIF file relative to the root of the repository
+      sarif_file: 'results.sarif'
+    env:
+      GITHUB_TOKEN: ${{ secrets.PAT }}
 
     - name: Inspect image
       run: |
