multi platform testing

--- a/.github/workflows/owasp.yaml
+++ b/.github/workflows/owasp.yaml
@@ -8,6 +8,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: ZAP Scan
-        uses: zaproxy/action-full-scan@v0.11.0
-        with:
-        target: 'https://www.zaproxy.org/'
+      uses: zaproxy/action-full-scan@v0.11.0
+      with:
+        target: 'https://privategamehost.com:443/'
