--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: ["linux/amd64", "linux/arm/v7"] #"linux/arm64",
+        platform: ["linux/amd64", "linux/arm64"] #"linux/arm64",
     steps:
     - name: Prepare
       run: |
@@ -27,7 +27,7 @@ jobs:
       id: meta
       uses: docker/metadata-action@v5
       with:
-        images: ${{ secrets.DOCKERHUB_USERNAME }}/multi
+        images: ${{ secrets.DOCKERHUB_USERNAME }}/nodeapp
 
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v3
@@ -50,7 +50,7 @@ jobs:
       with:
         platforms: ${{ matrix.platform }}
         labels: ${{ steps.meta.outputs.labels }}
-        outputs: type=image,name=${{ secrets.DOCKERHUB_USERNAME }}/multi,push-by-digest=true,name-canonical=true,push=true
+        outputs: type=image,name=${{ secrets.DOCKERHUB_USERNAME }}/nodeapp,push-by-digest=true,name-canonical=true,push=true
 
     # - name: Upload Trivy report as a GitHub artifact
     #   uses: actions/upload-artifact@v4
@@ -92,7 +92,7 @@ jobs:
       id: meta
       uses: docker/metadata-action@v5
       with:
-        images: ${{ secrets.DOCKERHUB_USERNAME }}/multi
+        images: ${{ secrets.DOCKERHUB_USERNAME }}/nodeapp
     
     - name: Login to Docker Hub
       uses: docker/login-action@v3
@@ -104,14 +104,14 @@ jobs:
       working-directory: /tmp/digests
       run: |
         docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
-          $(printf '${{ secrets.DOCKERHUB_USERNAME }}/multi@sha256:%s ' *)          
+          $(printf '${{ secrets.DOCKERHUB_USERNAME }}/nodeapp@sha256:%s ' *)          
 
 
     - name: Scan Docker image with Trivy
       id: trivy_scan
       uses: aquasecurity/trivy-action@0.23.0
       with:
-        image-ref: ${{ secrets.DOCKERHUB_USERNAME }}/multi:${{ steps.meta.outputs.version }}
+        image-ref: ${{ secrets.DOCKERHUB_USERNAME }}/nodeapp:${{ steps.meta.outputs.version }}
         severity: "MEDIUM,HIGH,CRITICAL"
         format: 'sarif'
         output: 'results.sarif'
@@ -126,4 +126,4 @@ jobs:
 
     - name: Inspect image
       run: |
-        docker buildx imagetools inspect ${{ secrets.DOCKERHUB_USERNAME }}/multi:${{ steps.meta.outputs.version }}
+        docker buildx imagetools inspect ${{ secrets.DOCKERHUB_USERNAME }}/nodeapp:${{ steps.meta.outputs.version }}
