--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: ["linux/amd64", "linux/arm64"] #"linux/arm64",
+        platform: ["linux/amd64", "linux/arm/v7"] #"linux/arm64",
     steps:
     - name: Prepare
       run: |
