--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -1,8 +1,8 @@
 name: "CI Workflow"
-on:
-    pull_request:
-      types: [opened, synchronize, reopened]
-    push:
+on: workflow_dispatch
+    # pull_request:
+    #   types: [opened, synchronize, reopened]
+    # push:
       # branches:
       #   - VSUS-02
       #   - main
