--- a/.github/workflows/owasp.yaml
+++ b/.github/workflows/owasp.yaml
@@ -1,13 +1,18 @@
 name: "OWASP ZAP scan"
-on: workflow_call
+on: push
 jobs:
   build:
-    name: Testing ZAP
     runs-on: ubuntu-latest
-    steps:
+    name: Scan the webapplication
+    - name: Checkout
+      uses: actions/checkout@v4
+      with:
+        ref: master
     - name: ZAP Scan
       uses: zaproxy/action-full-scan@v0.11.0
       with:
-        target: 'https://dis03.dexon-technology.com:8089/'
-        # target: 'https://privategamehost.com:443/'
-        
+        token: ${{ secrets.GITHUB_TOKEN }}
+        docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
+        target: 'https://privategamehost.com:6444/'
+        rules_file_name: '.zap/rules.tsv'
+        cmd_options: '-a'
