--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -1,8 +1,8 @@
 name: "CI Workflow"
-on: workflow_dispatch
-    # pull_request:
-    #   types: [opened, synchronize, reopened]
-    # push:
+on:
+    pull_request:
+      types: [opened, synchronize, reopened]
+    push:
       # branches:
       #   - VSUS-02
       #   - main
@@ -19,6 +19,8 @@ jobs:
   owasp:
     name: Scan the Web App
     uses: ./.github/workflows/owasp.yaml
+    secrets:
+      PAT: ${{ secrets.PAT }}
 
   test:
     name: Test
