--- a/.github/workflows/owasp.yaml
+++ b/.github/workflows/owasp.yaml
@@ -1,5 +1,9 @@
 name: "OWASP ZAP scan"
-on: push
+on:   
+  workflow_call:
+    secrets:
+      PAT:
+        required: true
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -7,12 +11,14 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
       with:
-        ref: master
+        ref: VSUS-02
+
     - name: ZAP Scan
       uses: zaproxy/action-full-scan@v0.11.0
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.PAT }}
         docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
         target: 'https://privategamehost.com:6444/'
         rules_file_name: '.zap/rules.tsv'
         cmd_options: '-a'
+        retention-days: 1
