--- a/.github/workflows/owasp.yaml
+++ b/.github/workflows/owasp.yaml
@@ -8,6 +8,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     name: Scan the webapplication
+    steps:
     - name: Checkout
       uses: actions/checkout@v4
       with:
