--- a/.github/workflows/scan.yaml
+++ b/.github/workflows/scan.yaml
@@ -28,7 +28,7 @@ jobs:
           SONAR_PULL_REQUEST_BASE_BRANCH: ${{ github.base_ref }}  # The base branch for the PR
       # If you wish to fail your job when the Quality Gate is red, uncomment the
       # following lines. This would typically be used to fail a deployment.
-      - uses: sonarsource/sonarqube-quality-gate-action@master
-        timeout-minutes: 5
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      # - uses: sonarsource/sonarqube-quality-gate-action@master
+      #   timeout-minutes: 5
+      #   env:
+      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
